syntax = "proto3";

package greet;

option go_package = "github.com/dhany007/learn-grpc/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse); // one or more responses for this endpoint
  rpc LongGreet (stream GreetRequest) returns (GreetResponse); // more request and one response
  rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
  rpc GreetWithDeadline (GreetRequest) returns (GreetResponse);
}